--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-authors = ["the rp-rs team"]
+authors = ["Jordan Majd"]
 edition = "2018"
 readme = "README.md"
-name = "rp2040-project-template"
+name = "keebchain"
 version = "0.1.0"
 resolver = "2"
+
+[target.thumbv6m-none-eabi]
+runner = "elf2uf2-rs -d"
 
 [dependencies]
 cortex-m = "0.7.3"
@@ -17,14 +20,22 @@ defmt-rtt = "0.3.0"
 panic-probe = { version = "0.3.0", features = ["print-defmt"] }
 
 # We're using a Pico by default on this template
-rp-pico = "0.2.0"
-
+#rp-pico = "0.2.0"
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
-# sparkfun-pro-micro-rp2040 = "0.1.0"
+# I'm using waveshare RP2040 zero, similar enough to pro micro
+sparkfun-pro-micro-rp2040 = "0.1.0"
 
 # If you're not going to use a Board Support Package you'll need these:
-# rp2040-hal = { version="0.3.0", features=["rt"] }
-# rp2040-boot2 = "0.2.0"
+rp2040-hal = { version="0.3.0", features=["rt"] }
+#rp2040-boot2 = "0.2.0"
+
+# Set up ws2812
+panic-halt = "0.2.0"
+smart-leds = "0.3.0"
+#embedded-time = "0.12.0"
+nb = "1.0.0"
+pio = "0.1.0"
+ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "83fc175fd99f230e477f6fc4a0802e29fd8dcd6f" }
 
 # cargo build/run
 [profile.dev]
